Sprint 3: Fully functional Program. Switched to JWT Authentication. Tests will be added to this at a later Sprint.
Signed-off-by: theolufi <mateolufi03@gmail.com>